tests/Rules/Forms/Fixtures/valid/select_with_aria_label.html.twig
<select aria-label="Choices"><option>1</option></select>
