tests/Rules/Forms/Fixtures/invalid/label_empty.html.twig
{# 1 errors #}
<label></label>
